--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
 </head>
 <nav>  
     <div>
-        <a href="1pet.html"><strong> Single Pet</strong></a>
+        <a href="index.html"><strong> Single Pet</strong></a>
         <span>-</span>
         <a href="2pets.html"> <strong>Two Pets</strong></a>
         <span>-</span>
